# cpp-telemetry-opentelemetry

./: .gitignore  CMakeLists.txt
cmake/: com_github_opentelemetry_cpp.cmake  com_github_opentelemetry_proto.cmake  com_github_trpc_cpp.cmake
cmake/tools/: static_lib_pack.sh
